--- a/PocketTrip.html
+++ b/PocketTrip.html
@@ -77,7 +77,7 @@
           
         </div>
         <h3>Ver Proyecto</h3>
-        <a class="contact" href="link" target="_blank"><img src="images/projects/black_github.png" alt=""></a>
+        <a class="contact" href="https://github.com/BlasMartoss/PocketTrip-WEB" target="_blank"><img src="images/projects/black_github.png" alt=""></a>
     </div>
 
 
