--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     permitiéndote reservar tu plaza y disfrutar de experiencias compartidas con otros viajeros. 
                     Con una interfaz intuitiva y opciones personalizadas, te prepara para aventuras emocionantes y memorables, 
                     creando vínculos mientras exploras diferentes destinos.</p>
-                <a href="project1.html"><button class="project_button">ANALIZAR</button></a>
+                <a href="PocketTrip.html"><button class="project_button">ANALIZAR</button></a>
             </div>
         </div>
         
