--- a/PocketTrip.html
+++ b/PocketTrip.html
@@ -80,7 +80,7 @@
         <a class="contact" href="https://github.com/BlasMartoss/PocketTrip-WEB" target="_blank"><img src="images/projects/black_github.png" alt=""></a>
     </div>
 
-
+    <script src="code.js"></script>
 </body>
 
 <footer >
